--- a/Rotação de Givens.ipynb
+++ b/Rotação de Givens.ipynb
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "tTdz8lX3Pr0e",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 568
+        },
+        "outputId": "9bdec511-8f99-4cbd-ae74-45bd14f4d818"
       },
       "source": [
         "import random\n",
@@ -94,8 +98,45 @@
         "print('\\nMatriz R:\\n', R)\n",
         "print('\\nMatriz QR:\\n', Q@R)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Tempo de execução: 0.004373s\n",
+            "\n",
+            "Matriz A:\n",
+            " [[-849 -157  210  250  258]\n",
+            " [ 665  531   17 -808  284]\n",
+            " [-279 -244 -815 -994 -226]\n",
+            " [-338  -32 -589  382 -246]\n",
+            " [ 852  931 -409  256  403]]\n",
+            "\n",
+            "Matriz Q:\n",
+            " [[-0.588532    0.67427477  0.29685419 -0.30570803  0.1319235 ]\n",
+            " [ 0.46098208  0.16444482  0.07523881 -0.68325983 -0.53660838]\n",
+            " [-0.19340451 -0.1050109  -0.78536583 -0.48726823  0.31198973]\n",
+            " [-0.23430367  0.32021717 -0.49287228  0.39007655 -0.66893942]\n",
+            " [ 0.59061162  0.63619582 -0.215625    0.22384942  0.38707892]]\n",
+            "\n",
+            "Matriz R:\n",
+            " [[1442.5723552   941.72884646  -61.68564071 -265.66986302  318.4422593 ]\n",
+            " [   0.          589.13307474 -218.83485796  425.26720088  422.01117056]\n",
+            " [   0.            0.         1082.18398929  550.59701278  309.79858571]\n",
+            " [   0.            0.            0.         1166.30624677 -168.54336006]\n",
+            " [   0.            0.            0.            0.          131.6817052 ]]\n",
+            "\n",
+            "Matriz QR:\n",
+            " [[-849. -157.  210.  250.  258.]\n",
+            " [ 665.  531.   17. -808.  284.]\n",
+            " [-279. -244. -815. -994. -226.]\n",
+            " [-338.  -32. -589.  382. -246.]\n",
+            " [ 852.  931. -409.  256.  403.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
